--- a/cv.css
+++ b/cv.css
@@ -1,4 +1,4 @@
- 
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;700&family=Rancho&family=The+Nautigal:wght@400;700&family=Titan+One&family=Ubuntu:wght@300;400;500&display=swap');
 * {
     margin: 0;
@@ -16,9 +16,9 @@ body{
 }
 
 :root {
-    --dark: #0d6efd;
+    --dark:  #fd7e0d/* #0d6efd*/;
     --white: #ffffff;
-    --orange: #0d6efd;
+    --orange: #fd7e0d/*#0d6efd*/;
     --black:#212529;
     --sky:#0dcaf0;
     --gradient:linear-gradient(80deg,
@@ -256,19 +256,7 @@ body{
     color: var(--orange) !important;
     transition: 0.7s;
 }
-
-.nav-link-1::before {
-    content: '';
-    position: absolute;
-    top: 25%;
-    left: 32%;
-    background-color: black;
-    width: 35%;
-    height: 0px;
-    transition: 0.7s;
-    border-radius: 5px;
-}
-
+ 
 .nav-link-1:hover::before {
     width: 35%;
     height: 32px;
@@ -277,30 +265,10 @@ body{
 }
 
 .active-home {
-    color: var(--orange) !important;
+    color: #fd7e0d !important;
 }
 
-.active-home::before {
-    content: '';
-    position: absolute;
-    top: 25%;
-    left: 32%;
-    background-color: black;
-    width: 35%;
-    height: 32px;
-    border-radius: 5px;
-    transition: 0.7s;
-}
-
-.icon-hover {
-    color: var(--dark) !important;
-    cursor: pointer;
-}
-
-.icon-hover:hover {
-    color: var(--orange) !important;
-}
-
+ 
 @media (max-:992px) {
     .nav-link-1 {
         text-align: center !important;
@@ -313,10 +281,7 @@ body{
     }
 
     
-    .active-home {
-        color: black !important;
-        text-align: center !important;
-    }
+    
     html{
         font-size: 15px;
     }
@@ -327,7 +292,7 @@ body{
 .main-body{
     background:linear-gradient(rgba(0, 2, 8, 0.868)
     ,rgba(10, 0, 10, 0.655)),
-    url('e.jpg');
+    url('image/e.jpg');
     background-attachment: fixed;
     background-position: top;
     padding-bottom: 8% !important;
@@ -335,6 +300,7 @@ body{
     background-size: cover;
     
 }
+/*
 .icon-center{
     padding-top: 5px;
     text-align: center;
@@ -345,7 +311,8 @@ body{
 .icon-hover-1:hover{
     color: var(--white);
     transition: 0.5s;
-}
+}*/
+
 .over-1{
     border-radius: 50% 45%;
     position: relative;
@@ -433,7 +400,7 @@ body{
     }
     
 } */
-
+ 
 .text-m{
     position: absolute;
     z-index: 56;
@@ -787,7 +754,7 @@ body {
         padding: 50px 0px 50px 0px;
         background:linear-gradient(rgba(0, 2, 8, 0.868)
         ,rgba(10, 0, 10, 0.655)),
-        url('12.jpg');
+        url('image/12.jpg');
         background-attachment: fixed;
         background-position: top;
         background-repeat: no-repeat;
@@ -834,7 +801,7 @@ body {
     width: 200%;
     height: 100%;
     background:linear-gradient(176deg,#2b00ff80,#050000 ,
-    #5005ff48), url(13.jpg);
+    #5005ff48), url(image/13.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -1024,3 +991,5 @@ body {
     padding: 200px 0px 0px 0px;
     color: white;
 }
+
+ 
